--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: 'Module to tie together multiple C<Geo::Coder::*> modules'
+abstract: 'Module to tie together multiple Geo::Coder::* modules'
 author:
   - 'Dan Horgan <cpan@lokku.com>'
 build_requires:
@@ -18,7 +18,7 @@ name: Geo-Coder-Many
 provides:
   Geo::Coder::Many:
     file: lib/Geo/Coder/Many.pm
-    version: 0.1
+    version: 0.11
   Geo::Coder::Many::Bing:
     file: lib/Geo/Coder/Many/Bing.pm
   Geo::Coder::Many::Generic:
@@ -61,4 +61,4 @@ requires:
   perl: 5.010
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.1
+version: 0.11
