--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Geo-Coder-Many
-version: 0.15
+version: 0.16
 author:
   - 'Dan Horgan <cpan@lokku.com>'
 abstract: Module to tie together multiple Geo::Coder::* modules
@@ -10,6 +10,7 @@ resources:
 requires:
   Geo::Coder::Bing: 0.10
   Geo::Coder::Google: 0.06
+  Geo::Coder::Mapquest: 0.04
   Geo::Coder::Multimap: 0.01
   Geo::Coder::OSM: 0.01
   Geo::Coder::PlaceFinder: 0.02
@@ -30,13 +31,16 @@ build_requires:
 provides:
   Geo::Coder::Many:
     file: lib/Geo/Coder/Many.pm
-    version: 0.15
+    version: 0.16
   Geo::Coder::Many::Bing:
     file: lib/Geo/Coder/Many/Bing.pm
   Geo::Coder::Many::Generic:
     file: lib/Geo/Coder/Many/Generic.pm
   Geo::Coder::Many::Google:
     file: lib/Geo/Coder/Many/Google.pm
+  Geo::Coder::Many::Mapquest:
+    file: lib/Geo/Coder/Many/Mapquest.pm
+    version: 0.01
   Geo::Coder::Many::Multimap:
     file: lib/Geo/Coder/Many/Multimap.pm
   Geo::Coder::Many::OSM:
