--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,8 @@
 ---
 name: Geo-Coder-Many
-version: 0.18
+version: 0.19
 author:
-  - 'Dan Horgan <cpan@lokku.com>'
+  - 'Ed Freyfogle <cpan@lokku.com>'
 abstract: Module to tie together multiple Geo::Coder::* modules
 license: perl
 resources:
@@ -13,6 +13,7 @@ requires:
   Geo::Coder::Mapquest: 0.04
   Geo::Coder::Multimap: 0.01
   Geo::Coder::OSM: 0.01
+  Geo::Coder::Ovi: 0.01
   Geo::Coder::PlaceFinder: 0.02
   Geo::Coder::SimpleGeo: 0.01
   Geo::Coder::Yahoo: 0.45
@@ -27,12 +28,12 @@ requires:
 build_requires:
   Test::Exception: 0
   Test::MockObject: 0
-  Test::More: 0
   Test::Pod::Coverage: 0
+  Test::Simple: 0
 provides:
   Geo::Coder::Many:
     file: lib/Geo/Coder/Many.pm
-    version: 0.18
+    version: 0.19
   Geo::Coder::Many::Bing:
     file: lib/Geo/Coder/Many/Bing.pm
   Geo::Coder::Many::Generic:
@@ -46,6 +47,9 @@ provides:
     file: lib/Geo/Coder/Many/Multimap.pm
   Geo::Coder::Many::OSM:
     file: lib/Geo/Coder/Many/OSM.pm
+    version: 0.01
+  Geo::Coder::Many::Ovi:
+    file: lib/Geo/Coder/Many/Ovi.pm
     version: 0.01
   Geo::Coder::Many::PlaceFinder:
     file: lib/Geo/Coder/Many/PlaceFinder.pm
