--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Geo-Coder-Many
-version: 0.19
+version: 0.2
 author:
   - 'Ed Freyfogle <cpan@lokku.com>'
 abstract: Module to tie together multiple Geo::Coder::* modules
@@ -10,6 +10,7 @@ resources:
 requires:
   Geo::Coder::Bing: 0.10
   Geo::Coder::Google: 0.06
+  Geo::Coder::Googlev3: 0.01
   Geo::Coder::Mapquest: 0.04
   Geo::Coder::Multimap: 0.01
   Geo::Coder::OSM: 0.01
@@ -33,13 +34,15 @@ build_requires:
 provides:
   Geo::Coder::Many:
     file: lib/Geo/Coder/Many.pm
-    version: 0.19
+    version: 0.2
   Geo::Coder::Many::Bing:
     file: lib/Geo/Coder/Many/Bing.pm
   Geo::Coder::Many::Generic:
     file: lib/Geo/Coder/Many/Generic.pm
   Geo::Coder::Many::Google:
     file: lib/Geo/Coder/Many/Google.pm
+  Geo::Coder::Many::Googlev3:
+    file: lib/Geo/Coder/Many/Googlev3.pm
   Geo::Coder::Many::Mapquest:
     file: lib/Geo/Coder/Many/Mapquest.pm
     version: 0.01
